<resources>
    <string name="app_name">MapLib</string>
    <string name="location_m_format">%.1f m</string>
    <string name="location_km_hr_format">%.1f km/hr</string>
    <string name="location_coordinates">%1$s Lat  %2$s Lon</string>
    <string name="track_name">Track %s</string>
    <string name="track_is_writing">Track is writing %s …</string>
    <string name="track_is_paused">Track writing is paused. Press start to continue or stop to stop.</string>
    <string name="track_is_writing_long">about %1$d days, %2$d hours, %3$d minutes</string>
    <string name="track_is_writing_short">about %1$d hours, %2$d minutes</string>
    <string name="track_is_writing_supershort">about %d minutes</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="open">Open</string>
    <string name="speed">Speed</string>
    <string name="accuracy">Accuracy</string>
    <string name="three_dots">…</string>
    <string name="signal_source">Signal source</string>
    <string name="altitude">Altitude</string>
    <string name="satellite_count">Satellite count</string>
    <string name="current_location">Current location</string>
    <string name="current_status">Status</string>
    <string name="nextgis">NextGIS</string>
    <string name="refresh">Refresh</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_account">Add account</string>
    <string name="choose_account">Choose account</string>
    <string name="nextgis_url">Instance URL</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connection_error">Cannot create a connection</string>
    <string name="empty_field">Field should not be empty</string>

    <string name="background_location_message">NextGIS app needs background location permission to collect tracks continuously even when the app is not in
        use. Otherwise the track will be collected only when the app in foreground. Please select \'%s\'.</string>
    <string name="background_location_always">Allow all the time</string>
    <string name="background_location">Background location usage</string>
    <string name="action_settings">Settings</string>
    <string name="share_gpx_preparing">Prepare GPX data...</string>

    <string name="status_part1">Collecting tracking data</string>
    <string name="status_part2"> and syncing ...</string>
    <string name="status_standby">Stand by. Tap play to start collecting tracking data.</string>
    <string name="click_folder">Please click on folder or tracker group</string>


    <string name="track_sync_description"><![CDATA[You can sync your tracking data with the cloud. Enter your Web GIS credentials. If you don\'t have it, <a href=\"https://my.nextgis.com/signup/?next=/webgis\">create your Web GIS</a>.]]></string>

</resources>
