<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp" app:srcCompat="@drawable/ic_gps_off"
            android:id="@+id/locationIcon"
            android:contentDescription="@string/current_location"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="9dp"/>
    <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp" app:srcCompat="@drawable/ic_speed"
            android:id="@+id/speedIcon"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/locationIcon" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/speed"/>
    <TextView
            android:text="@string/three_dots"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/accuracyText" android:layout_marginEnd="9dp" app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@+id/accuracyIcon"
            app:layout_constraintBottom_toBottomOf="@+id/accuracyIcon" android:textSize="12sp"/>
    <TextView
            android:text="@string/three_dots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/locationText" app:layout_constraintStart_toEndOf="@+id/locationIcon"
            android:layout_marginStart="4dp" app:layout_constraintEnd_toStartOf="@+id/accuracyIcon"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/locationIcon"
            app:layout_constraintTop_toTopOf="@+id/locationIcon" android:textColor="@android:color/black"
            android:textSize="12sp"/>
    <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp" app:srcCompat="@drawable/ic_accuracy"
            android:id="@+id/accuracyIcon" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="9dp" app:layout_constraintEnd_toStartOf="@+id/accuracyText"
            android:layout_marginEnd="4dp" android:contentDescription="@string/accuracy" />
    <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp" app:srcCompat="@drawable/ic_altitude"
            android:id="@+id/altIcon"
            android:contentDescription="@string/altitude"
            android:layout_marginEnd="4dp" app:layout_constraintEnd_toStartOf="@+id/altText"
            android:layout_marginTop="11dp" app:layout_constraintTop_toBottomOf="@+id/locationIcon"/>
    <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp" app:srcCompat="@drawable/ic_satellite"
            android:id="@+id/satIcon"
            android:contentDescription="@string/satellite_count"
            android:layout_marginEnd="4dp" app:layout_constraintEnd_toStartOf="@+id/satCountText"
            android:layout_marginTop="11dp" app:layout_constraintTop_toBottomOf="@+id/accuracyIcon"/>
    <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp" app:srcCompat="@drawable/ic_signal"
            android:id="@+id/aerialIcon"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/accuracyIcon" android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/signalSourceText"
            android:contentDescription="@string/signal_source"/>
    <TextView
            android:text="@string/three_dots"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/signalSourceText"
            android:textColor="@android:color/black" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="9dp"
            app:layout_constraintTop_toTopOf="@+id/aerialIcon"
            app:layout_constraintBottom_toBottomOf="@+id/aerialIcon" android:textSize="12sp"/>
    <TextView
            android:text="@string/three_dots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/speedText" android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/speedIcon" android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/speedIcon" app:layout_constraintBottom_toBottomOf="@+id/speedIcon"
            app:layout_constraintEnd_toStartOf="@+id/altIcon" android:layout_marginEnd="4dp" android:textSize="12sp"/>
    <TextView
            android:text="@string/three_dots"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/satCountText"
            android:textColor="@android:color/black" app:layout_constraintEnd_toStartOf="@+id/aerialIcon"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="@+id/satIcon" app:layout_constraintBottom_toBottomOf="@+id/satIcon"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/three_dots"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/altText" android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/satIcon" android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="@+id/altIcon" app:layout_constraintBottom_toBottomOf="@+id/altIcon"
            android:textSize="12sp"/>

    <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/ic_time_24"
            android:id="@+id/locationTimeIcon"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/speedIcon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/speed"
            />

    <TextView
            android:text="@string/three_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationTimeText"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/speedIcon"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/locationTimeIcon"
            app:layout_constraintBottom_toBottomOf="@+id/locationTimeIcon"
            android:layout_marginEnd="4dp"
            android:textSize="12sp"/>


    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serviceStatus"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@+id/locationTimeIcon"
            android:layout_marginStart="9dp"
            android:textSize="12sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>