<?xml version="1.0" encoding="utf-8"?><!--
  ~ Project:  NextGIS Mobile SDK
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ *****************************************************************************
  ~ Copyright © 2019 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.nextgis.maplib.fragment.SelectInstanceDialog" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="8dp">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_account"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                tools:itemCount="3"
                tools:listitem="@layout/item_web_instance"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/add_new"
                android:layout_width="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="@{()->fragment.addAccount()}">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/add_account"
                    android:src="@drawable/ic_plus_box" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:text="@string/add_account"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="end|bottom"
                android:onClick="@{()->fragment.dismiss()}"
                android:text="@string/cancel" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>